--- a/css/home.css
+++ b/css/home.css
@@ -49,16 +49,16 @@ body{
     width: 30%;
 }
 
-.Navbar .sideButtons h2{
+.Navbar .sideButtons a{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     color: rgba(102, 102, 102, 0.774);
     padding: 10px 15px;
-    
+    text-decoration: none;
 }
 
-.Navbar .sideButtons h2:last-child{
+.Navbar .sideButtons a:last-child{
     background-color: rgb(78, 49, 209);
     color: #fff;
     padding: 10px 15px;
@@ -66,9 +66,9 @@ body{
 
 }
 
-.Navbar .sideButtons h2:nth-child(1):hover,
-.Navbar .sideButtons h2:nth-child(2):hover,
-.Navbar .sideButtons h2:nth-child(3):hover{
+.Navbar .sideButtons a:nth-child(1):hover,
+.Navbar .sideButtons a:nth-child(2):hover,
+.Navbar .sideButtons a:nth-child(3):hover{
     border-bottom: 3px solid rgb(29, 118, 190);
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
@@ -124,6 +124,50 @@ body{
     font-size: 25px;
 }
 
+
+
+.Titulo-Produtos{
+    font-family: 'Shrikhand'; 
+    background-color: #2cc3c9;
+    font-size: 20px;
+    padding: 20px;
+}
+
+ .Produtos {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    font-family: 'Shrikhand';
+    font-size: 15px;
+    background-color: #2cc3c9;
+}
+
+.Produto-item{
+    background-color: #2cc3c9;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+
+}
+
+.Produto-item img{
+    border-radius: 80%;
+    margin-bottom: 30px;
+    
+}
+
+
+
+.Texto-produto-item {
+   max-width: 500px;
+   font-size: 13px;
+}
+
+
+
 @media screen and (max-width:1200px){
     .Sobre{
         flex-direction: column;
@@ -132,7 +176,25 @@ body{
     .Imagem-Sobre img{
         border-radius: 0%;
     }
+
+    .Produtos{
+        flex-direction: column;
+        align-items: center;
+    }
+
+
 }
 
+footer {
+    width: 100%;
+    background-color: rgb(91, 91, 93);
+    padding: 100px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.Assinatura{
+    font-family: 'Shrikhand';
 
+}
